# geomarket_agent

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json
backend/: db.sqlite3  litedb.db  requirement.txt  requirements.txt
backend/app/: envs.py  models.py  schemas.py  settings.py  urls.py  views.py
backend/app/ml_codes/: agents.py  eda_parquet.py  export_pdf.py  final_recommendation.py  generate_pdf.py  get_opportunities.py  grab_locations.py  main.py  pyproject.toml  schemas.py  test_recommender.py  test_vlm_call.py  transform.py
backend/app/ml_codes/processors/: photo_processor.py  place_processor.py  review_processor.py
backend/app/ml_codes/recommendation/: __init__.py  opportunity.py  recommender.py  swot.py
backend/templates/: index.html
data/: oppor-20.json  test.json  top-10.json
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: Markdown.css  index.css
ml_codes/: .gitignore  eda_parquet.py  grab_locations.py  schemas.py  test_vlm_call.py  transform.py
ml_codes/processors/: photo_processor.py  place_processor.py
outputs/profiles/: ChIJ6UZqZCX0aS4RmHJ77dCCBgE.json  ChIJCXhFuVD1aS4R6VEVj4fJzr8.json  ChIJGQ1hkdX1aS4Rq1rdFefMN38.json  ChIJM-y5dv_3aS4Ru5vfq9j1HK4.json  ChIJMYalj9f1aS4RaX5Zhk5W8X0.json  ChIJR0QLrCj0aS4R1K24xUDsbiI.json  ChIJV6YDE1r1aS4R9oJPQxQzHQQ.json  ChIJWTAQFkf1aS4R5VdtGaOQ60s.json  ChIJXTVJxQT1aS4RKSBNCF8ENMg.json  ChIJd_vf2i70aS4RJO7i-3iWIPA.json  ChIJf-2hz331aS4Roq7FlzEbl4Q.json  ChIJf0k1Ay_1aS4RzTwG-KfszGc.json  test.json  (+4 more)
(+11 files in other folders)
